feat: 编辑个人信息

--- a/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
+++ b/pages/subpages/mine/setting/subpages/user-info-setting/index.wxml
@@ -13,32 +13,43 @@
   <view class="form-list">
     <view class="form-item row">
       <view class="form-label">昵 称：</view>
-      <input class="form-input" value="{{ userInfo.nickname }}" placeholder="未设置" />
+      <input class="form-input" value="{{ userInfo.nickname }}" bindinput="setNickname" placeholder="未设置" />
     </view>
     <view class="form-item row">
       <view class="form-label">性 别：</view>
-      <view class="form-content">{{ ['保密', '男', '女'][userInfo.gender] }}</view>
+      <picker class="form-content" bindchange="selectGender" value="{{userInfo.gender}}" range="{{genderOptions}}">
+        {{genderOptions[userInfo.gender]}}
+      </picker>
     </view>
     <view class="form-item row">
       <view class="form-label">生 日：</view>
-      <view class="form-content {{ !userInfo.birthday ? 'empty' : '' }}">{{ userInfo.birthday || '--/--/--' }}</view>
+      <picker class="form-content {{ !userInfo.birthday ? 'empty' : '' }}" bindchange="selectBirthday" value="{{userInfo.birthday}}" mode="date">
+        {{ userInfo.birthday || '未设置' }}
+      </picker>
     </view>
     <view class="form-item row">
       <view class="form-label">星 座：</view>
-      <view class="form-content {{ !userInfo.constellation ? 'empty' : '' }}">{{ userInfo.constellation || '未设置' }}</view>
+      <picker 
+        class="form-content {{ !userInfo.constellation ? 'empty' : '' }}" 
+        value="{{constellationIndex}}" 
+        bindchange="selectConstellation" 
+        range="{{constellationOptions}}"
+      >
+        {{userInfo.constellation || "未设置"}}
+      </picker>
     </view>
     <view class="form-item row">
       <view class="form-label">职 业：</view>
-      <input class="form-input" value="{{ userInfo.career }}" placeholder="未设置" />
+      <input class="form-input" value="{{ userInfo.career }}" bindinput="setCareer" placeholder="未设置" />
     </view>
     <view class="form-item row">
       <view class="form-label">签 名：</view>
-      <input class="form-input" value="{{ userInfo.signature }}" placeholder="未设置" />
+      <input class="form-input" value="{{ userInfo.signature }}" bindinput="setSignature" placeholder="未设置" />
     </view>
   </view>
 </view>
 
 <view class="btn-wrap row between">
-  <view class="cancel-btn row center">取消</view>
-  <view class="save-btn row center active">保存</view>
+  <view class="cancel-btn row center" bindtap="cancel">取消</view>
+  <view class="save-btn row center {{saveBtnActive ? 'active' : ''}}" bindtap="save">保存</view>
 </view>
