--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -14,7 +14,7 @@
   <image class="bg" src="{{userInfo.bg || 'https://img.ubo.vip/tiddler/temp/bg.jpg'}}" mode="aspectFill" />
   <view class="content">
     <view class="avatar-wrap">
-      <image class="avatar" src="{{userInfo.avatar}}" />
+      <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar}}" />
       <view class="data-wrap">
         <view class="data-item">
           <view class="data-title">获赞</view>
@@ -30,8 +30,8 @@
         </view>
       </view>
     </view>
-    <view class="name">{{userInfo.nickname}}</view>
-    <view class="introduce row">
+    <view class="name" bindtap="navToUserInfoSetting">{{userInfo.nickname}}</view>
+    <view class="introduce row" bindtap="navToUserInfoSetting">
       <text>{{ userInfo.signature || '点击添加签名，让大家了解你～'}}</text>
       <image class="edit-icon" wx:if="{{!userInfo.signature}}" src="https://img.ubo.vip/tiddler/mine/edit.png" />
     </view>
