--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -18,15 +18,15 @@
       <view class="data-wrap">
         <view class="data-item">
           <view class="data-title">获赞</view>
-          <view class="data">{{NUM.over(beLikedTimes, 100000)}}</view>
+          <view class="data">{{NUM.over(userInfo.beLikedTimes, 100000)}}</view>
         </view>
         <view class="data-item">
           <view class="data-title">关注</view>
-          <view class="data">{{NUM.over(followedAuthorNumber, 100000)}}</view>
+          <view class="data">{{NUM.over(userInfo.followedAuthorNumber, 100000)}}</view>
         </view>
         <view class="data-item">
           <view class="data-title">粉丝</view>
-          <view class="data">{{NUM.over(fansNumber, 100000)}}</view>
+          <view class="data">{{NUM.over(userInfo.fansNumber, 100000)}}</view>
         </view>
       </view>
     </view>
