--- a/pages/subpages/mine/fan-follow-list/index.wxss
+++ b/pages/subpages/mine/fan-follow-list/index.wxss
@@ -10,3 +10,32 @@
   padding: 0 8px;
   height: 44px;
 }
+
+.menu-tab {
+  margin: 0 12px;
+  padding: 0 12px;
+  height: 44px;
+  color: #999;
+  font-size: 15px;
+}
+.menu-tab.active {
+  position: relative;
+  color: #333;
+  font-weight: 550;
+}
+.menu-tab.active::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  content: "";
+  background: #333;
+}
+
+.no-more-tips {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
+}
