--- a/pages/subpages/mine/fan-follow-list/index.wxss
+++ b/pages/subpages/mine/fan-follow-list/index.wxss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   background: #fff;
+  border: 1px solid #eee;
   z-index: 100;
 }
 .nav-bar {
@@ -31,6 +32,53 @@
   height: 2px;
   content: "";
   background: #333;
+}
+
+.list {
+  padding: 0 24rpx;
+  background: #fff;
+}
+.item {
+  padding: 24rpx 0;
+  border-bottom: 1px solid #eee;
+}
+.item:last-child {
+  border-bottom: none;
+}
+.avatar {
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+}
+.user-info {
+  margin: 0 24rpx;
+  flex: 1;
+}
+.name {
+  color: #333;
+  font-size: 30rpx;
+  font-weight: 550;
+}
+.signature {
+  margin-top: 4rpx;
+  color: #999;
+  font-size: 22rpx;
+}
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120rpx;
+  height: 50rpx;
+  color: #333;
+  font-size: 24rpx;
+  background: #eee;
+  border-radius: 8rpx;
+}
+.btn.active {
+  color: #fff;
+  background: #FE3666;
 }
 
 .no-more-tips {
