--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -1,8 +1,8 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
-<view class="note-item" bindtap="navToNoteDetail">
+<view class="note-item {{visible ? 'show' : ''}}" bindtap="navToNoteDetail">
   <view class="cover-wrap">
-    <image class="cover" src="{{item.imageList[0]}}" mode="widthFix" lazy-load />
+    <image class="cover" src="{{item.imageList[0]}}" bindload="onCoverLoaded" mode="widthFix" lazy-load />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
       <image class="private-icon" src="https://img.ubo.vip/tiddler/media-item/private-icon.png" />
       <text>私密</text>
