--- a/components/note-item/index.wxss
+++ b/components/note-item/index.wxss
@@ -1,6 +1,11 @@
 .note-item {
   margin-bottom: 30rpx;
   width: 350rpx;
+  opacity: 0;
+}
+.note-item.show {
+  opacity: 1;
+  transition: opacity .2s ease;
 }
 
 .cover-wrap {
