--- a/components/live-item/index.wxml
+++ b/components/live-item/index.wxml
@@ -1,8 +1,8 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
-<view class="live-item" bindtap="navToLiveDetail">
-  <image class="bg" src="{{item.cover}}" mode="aspectFill" lazy-load />
+<view class="live-item {{visible ? 'show' : ''}}" bindtap="navToLiveDetail">
+  <image class="bg" src="{{item.cover}}" bindload="onCoverLoaded" mode="aspectFill" lazy-load />
   <live-player class="active-bg {{activeBgVisible ? 'show' : ''}}" wx:if="{{active}}" src="{{item.playUrl}}" bindstatechange="statechange" autoplay muted object-fit="fillCrop" />
 
   <view class="status-wrap row">
