--- a/pages/tab-bar-pages/mall/index.wxss
+++ b/pages/tab-bar-pages/mall/index.wxss
@@ -76,9 +76,16 @@ page {
   font-size: 20rpx;
 }
 
-.goods-list {
+.commodity-list {
   margin-top: 30rpx;
   padding: 20rpx;
   border-radius: 32rpx 32rpx 0 0;
   box-shadow: 0 -10px 20px -2px #f0f0f0;
+}
+
+.no-more-tips {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
 }
