--- a/pages/tab-bar-pages/mall/components/commodity-item/index.wxss
+++ b/pages/tab-bar-pages/mall/components/commodity-item/index.wxss
@@ -1,7 +1,13 @@
 .commodity-item {
   margin-bottom: 30rpx;
   width: 350rpx;
+  opacity: 0;
 }
+.commodity-item.show {
+  opacity: 1;
+  transition: opacity .2s ease;
+}
+
 .cover-wrap {
   position: relative;
   font-size: 0;
