--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -5,6 +5,11 @@
   background: #fff;
   border-radius: 18rpx;
   overflow: hidden;
+  opacity: 0;
+}
+.goods-item.show {
+  opacity: 1;
+  transition: opacity .2s ease;
 }
 
 .cover {
