--- a/components/restaurant-item/index.wxml
+++ b/components/restaurant-item/index.wxml
@@ -1,4 +1,4 @@
-<view class="restaurant-item {{visible ? 'show' : ''}}">
+<view class="restaurant-item {{visible ? 'show' : ''}}" bindtap="checkDetail">
   <view class="cover-wrap">
     <image class="cover" mode="widthFix" src="{{ item.cover }}" bindload="onCoverLoaded" lazy-load />
     <view class="type-label row">美食</view>
