--- a/components/scenic-item/index.wxml
+++ b/components/scenic-item/index.wxml
@@ -1,4 +1,4 @@
-<view class="scenic-item {{visible ? 'show' : ''}}">
+<view class="scenic-item {{visible ? 'show' : ''}}" bindtap="checkDetail">
   <view class="cover-wrap">
     <image class="cover" mode="widthFix" src="{{ item.imageList[0] }}" bindload="onCoverLoaded" lazy-load />
     <view class="type-label row">景点</view>
