--- a/components/scenic-item/index.wxml
+++ b/components/scenic-item/index.wxml
@@ -1,6 +1,6 @@
 <view class="scenic-item {{visible ? 'show' : ''}}" bindtap="checkDetail">
   <view class="cover-wrap">
-    <image class="cover" mode="widthFix" src="{{ item.imageList[0] }}" bindload="onCoverLoaded" lazy-load />
+    <image class="cover" mode="widthFix" src="{{ item.cover }}" bindload="onCoverLoaded" lazy-load />
     <view class="type-label row">景点</view>
     <view class="address-info">
       <image class="address-icon" src="https://img.ubo.vip/tiddler/media-item/address.png" />
