--- a/pages/subpages/mall/components/hotel-item/index.wxml
+++ b/pages/subpages/mall/components/hotel-item/index.wxml
@@ -1,5 +1,5 @@
-<view class="hotel-item">
-  <image class="hotel-image" mode="aspectFill" src="{{info.image}}" />
+<view class="hotel-item" bindtap="checkDetail">
+  <image class="hotel-image" mode="aspectFill" src="{{info.cover}}" />
   <view class="hotel-info">
     <view class="hotel-name omit single-line">{{info.name}}</view>
     <view class="hotel-appraise row">
@@ -7,16 +7,18 @@
         <text class="hotel-rate-number">{{info.rate}}</text>
         <text>分</text>
       </view>
-      <view class="hotel-type">{{info.type}}</view>
+      <view class="hotel-type">{{['经济酒店', '舒适酒店', '高档酒店', '豪华酒店'][info.grade - 1]}}</view>
     </view>
-    <view class="hotel-tag row">{{info.tag}}</view>
+    <view class="labels">
+      <view class="label row" wx:for="{{info.featureTagList}}" wx:key="index" wx:for-item="tag">{{tag}}</view>
+    </view>
     <view class="hotel-distance-wrap row between">
       <view class="hotel-distance row">
         <image class="hotel-distance-icon" src="./images/position.png" />
-        <text>距景点{{info.distance}}</text>
+        <text>相距{{distance}}km</text>
       </view>
       <view class="price-wrap row">
-        <price-unit price="{{info.basePrice || 0}}" fontSize="20rpx" integerFontSize="28rpx" />
+        <price-unit price="{{info.price || 0}}" fontSize="20rpx" integerFontSize="28rpx" />
         <text>起</text>
       </view>
     </view>
