--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -238,7 +238,7 @@
     </view>
   </view>
   <scroll-view class="scenic-spot-list" scroll-x enable-flex>
-    <scenic-spot-item wx:for="{{nearbyScenicSpotList}}" wx:key="index" info="{{item}}" />
+    <scenic-spot-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
 
   <view class="content-title-wrap">
