feat: 附近酒店、景点

--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -4,7 +4,7 @@
   url="/pages/subpages/mall/scenic-spot/subpages/spot-detail/index?id={{item.id}}"
   hover-class="none"
 >
-  <image class="cover" src="{{item.image}}" mode="aspectFill" lazy-load />
+  <image class="cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
   <view class="content">
     <view class="row">
       <view class="title omit single-line">{{item.name}}</view>
