--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -257,6 +257,7 @@
     <scroll-view class="hotel-hotel-list" scroll-x enable-flex>
       <scenic-spot-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
     </scroll-view>
+    <empty-illus wx:if="{{!nearbyScenicList.length}}" desc="暂无附近景点" height="520rpx" />
   </view>
   
   <view class="content-wrap">
@@ -270,6 +271,7 @@
     <scroll-view class="hotel-list" scroll-x enable-flex>
       <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
     </scroll-view>
+    <empty-illus wx:if="{{!nearbyHotelList.length}}" desc="暂无附近酒店" height="520rpx" />
   </view>
 
   <view class="content-wrap">
