--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -221,25 +221,27 @@
 
   <view class="content-title-wrap row between">
     <view class="content-title">附近酒店</view>
-    <view class="row">
-      <view class="more-detail">共10个推荐</view>
+    <view class="row" wx:if="{{nearbyHotelTotal > 10}}">
+      <view class="more-detail">共{{nearbyHotelTotal}}个推荐</view>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
   <scroll-view class="hotel-list" scroll-x enable-flex>
     <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
+  <empty-illus wx:if="{{!nearbyHotelList.length}}" desc="暂无附近酒店" height="520rpx" />
 
   <view class="content-title-wrap row between">
     <view class="content-title">附近景点</view>
-    <view class="row">
-      <view class="more-detail">共10个推荐</view>
+    <view class="row" wx:if="{{nearbyScenicTotal > 10}}">
+      <view class="more-detail">共{{nearbyScenicTotal}}个推荐</view>
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
   <scroll-view class="scenic-spot-list" scroll-x enable-flex>
     <scenic-spot-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
+  <empty-illus wx:if="{{!nearbyScenicList.length}}" desc="暂无附近景点" height="520rpx" />
 
   <view class="content-title-wrap">
     <view class="content-title">达人打卡</view>
