--- a/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/hotel-detail/index.wxml
@@ -254,7 +254,7 @@
         <image class="more-icon" src="./images/more.png" />
       </view>
     </view>
-    <scroll-view class="hotel-hotel-list" scroll-x enable-flex>
+    <scroll-view class="hotel-hotel-list" scroll-x enable-flex wx:if="{{nearbyScenicList.length}}">
       <scenic-spot-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
     </scroll-view>
     <empty-illus wx:if="{{!nearbyScenicList.length}}" desc="暂无附近景点" height="520rpx" />
@@ -268,7 +268,7 @@
         <image class="more-icon" src="./images/more.png" />
       </view>
     </view>
-    <scroll-view class="hotel-list" scroll-x enable-flex>
+    <scroll-view class="hotel-list" scroll-x enable-flex wx:if="{{nearbyHotelList.length}}">
       <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
     </scroll-view>
     <empty-illus wx:if="{{!nearbyHotelList.length}}" desc="暂无附近酒店" height="520rpx" />
