--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -226,7 +226,7 @@
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="hotel-list" scroll-x enable-flex>
+  <scroll-view class="hotel-list" scroll-x enable-flex wx:if="{{nearbyHotelList.length}}">
     <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
   <empty-illus wx:if="{{!nearbyHotelList.length}}" desc="暂无附近酒店" height="520rpx" />
@@ -238,7 +238,7 @@
       <image class="more-icon" src="./images/more.png" />
     </view>
   </view>
-  <scroll-view class="scenic-spot-list" scroll-x enable-flex>
+  <scroll-view class="scenic-spot-list" scroll-x enable-flex wx:if="{{nearbyScenicList.length}}">
     <scenic-spot-item wx:for="{{nearbyScenicList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
   <empty-illus wx:if="{{!nearbyScenicList.length}}" desc="暂无附近景点" height="520rpx" />
