--- a/pages/subpages/mall/goods/index.wxss
+++ b/pages/subpages/mall/goods/index.wxss
@@ -101,6 +101,30 @@
   padding: 20rpx;
 }
 
+.sub-category-tabs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 4rpx;
+}
+.sub-category-tab {
+  margin-right: 22rpx;
+  margin-bottom: 20rpx;
+  width: 160rpx;
+  height: 50rpx;
+  color: #999;
+  font-size: 24rpx;
+  background: #e9e9e9;
+  border-radius: 12rpx;
+}
+.sub-category-tab:nth-child(4n) {
+  margin-right: 0;
+}
+.sub-category-tab.active {
+  color: var(--theme-color);
+  font-weight: 550;
+  background: #dce7ff;
+}
+
 .no-more-tips {
   margin-top: 36rpx;
   color: #999;
