--- a/pages/tab-bar-pages/home/components/video-item/index.wxss
+++ b/pages/tab-bar-pages/home/components/video-item/index.wxss
@@ -1,10 +1,10 @@
-.note-item {
+.video-item {
   margin-bottom: 10rpx;
-  background: #fff;
+  border-bottom: 1px solid #eee;
 }
 
 .author-info-wrap {
-  padding: 0 24rpx;
+  margin-bottom: 10rpx;
   height: 100rpx;
 }
 .author-avatar {
@@ -40,39 +40,36 @@
   flex: 1;
 }
 
-.follow-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100rpx;
-  height: 42rpx;
-  color: #fff;
-  font-size: 22rpx;
-  font-weight: bold;
-  border-radius: 21rpx;
-  background: #EE3769;
+.cover-wrap {
+  position: relative;
+  width: 100%;
+  height: 400rpx;
+  font-size: 0;
+  overflow: hidden;
+  border-radius: 20rpx;
 }
-.follow-btn.invalid {
-  color: #b2b2b2;
-  background: #f1f1f1;
+.cover {
+  width: 100%;
+  height: 100%;
 }
-
-.more-icon {
-  margin-left: 24rpx;
-  width: 50rpx;
-  height: 50rpx;
+.play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6);
 }
-
-.note-imgs {
-  height: 750rpx;
-}
-.note-img {
-  width: 100%; 
-  height: 700rpx
+.play-icon {
+  margin-left: 10rpx;
+  width: 32rpx;
+  height: 32rpx;
 }
 
 .title {
-  padding: 0 24rpx;
+  margin-top: 24rpx;
   color: #333;
   font-size: 30rpx;
   font-weight: bold;
@@ -85,7 +82,7 @@
 }
 
 .goods-info-wrap {
-  margin: 24rpx;
+  margin: 24rpx 0;
   padding: 16rpx;
   border-radius: 20rpx;
   border: 1px solid #eee;
@@ -138,56 +135,16 @@
   font-size: 22rpx;
 }
 
-.comment-wrap {
-  margin: 24rpx;
-  padding: 20rpx 24rpx;
-  background: #f5f6f8;
-  border-radius: 20rpx;
-}
-.comment-item {
-  display: flex;
-  align-items: baseline;
-  margin-bottom: 6rpx;
-  font-size: 26rpx;
-}
-.commentator-name {
-  color: #333;
-  font-weight: bold;
-}
-.comment-content {
-  flex: 1;
-  color: #666;
-}
-.explain {
-  margin-top: 6rpx;
-  color: #999;
-  font-size: 24rpx;
-}
-
 .btn-wrap {
   display: flex;
   align-items: center;
   margin-top: 24rpx;
-  padding: 10rpx 68rpx 24rpx 24rpx;
-}
-.comment-btn {
-  display: flex;
-  align-items: center;
-}
-.user-avatar {
-  width: 46rpx;
-  height: 46rpx;
-  border-radius: 50%;
-}
-.comment-btn-desc {
-  margin-left: 10rpx;
-  font-size: 26rpx;
-  color: #999;
+  padding: 12rpx 36rpx 24rpx 12rpx;
 }
 .other-btns {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   flex: 1;
   margin-left: 180rpx;
 }
