--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -16,15 +16,15 @@
 <view class="container">
   <swiper style="height: {{wrapHeightList[curMenuIndex]}}px;" current="{{curMenuIndex}}" bindchange="swiperChange">
     <swiper-item>
-      <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
-        <fall-flow class="fall-flow-0" list="{{followMediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+      <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px; background: #fff;">
+        <follow-media-item wx:for="{{followMediaList}}" wx:key="index" item="{{item}}" />
         <empty-illus wx:if="{{!userInfo || (followFinished && !followMediaList.length)}}" registerBtnVisible="{{!userInfo}}" desc="暂无关注列表" />
         <view class="no-more-tips" wx:if="{{followFinished && followMediaList.length}}">～没有更多了～</view>
       </view>
     </swiper-item>
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 102}}px;">
-        <fall-flow class="fall-flow-1" list="{{mediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
+        <fall-flow class="fall-flow" list="{{mediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无列表" />
         <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
       </view>
