--- a/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxml
@@ -12,10 +12,10 @@
 
 <view class="header" style="margin-top: {{statusBarHeight + 44}}px">
   <view class="data-card">
-    <view class="bg" />
+    <image class="bg" src="./images/income-bg.png" />
     <view class="main">
       <view class="balance-data-item">
-        <view class="balance-data-title">账户金额</view>
+        <view class="balance-data-title">累计收益</view>
         <view class="balance-data-amount">8828.92</view>
       </view>
       <view class="data-items-wrap row between">
@@ -36,7 +36,7 @@
         </view>
       </view>
     </view>
-    <button class="withdraw-btn">提现</button>
+    <button class="withdraw-btn">收益提现</button>
   </view>
   
   <view class="btns-wrap row between">
