--- a/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/catering-management/index.wxss
@@ -57,26 +57,9 @@
 .bg {
   position: absolute;
   left: 0;
-  top: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
-  background: #2F6BB3;
-}
-.bg::before, .bg::after {
-  position: absolute;
-  width: 320rpx;
-  height: 320rpx;
-  content: '';
-  border-radius: 50%;
-  background: #3979BE;
-}
-.bg::before {
-  left: -80rpx;
-  bottom: -200rpx;
-}
-.bg::after {
-  top: -230rpx;
-  right: -120rpx;
+  height: 396rpx;
 }
 
 .main {
@@ -88,6 +71,7 @@
   height: 100%;
 }
 .balance-data-title {
+  color: #FFF3DE;
   font-size: 30rpx;
 }
 .balance-data-amount {
@@ -98,6 +82,7 @@
   margin-top: 24rpx;
 }
 .data-title, .data-supplement {
+  color: #FFF3DE;
   font-size: 22rpx;
 }
 .data-amount {
@@ -109,12 +94,12 @@
   position: absolute;
   top: 32rpx;
   right: 32rpx;
-  color: #fff;
-  font-size: 28rpx;
+  color: #EC9B16;
+  font-size: 26rpx;
   width: 160rpx;
   height: 60rpx;
   border-radius: 30rpx;
-  border: 1px solid #fff;
+  background: #fff;
 }
 
 .btns-wrap {
