--- a/pages/subpages/mine/merchant-center/subpages/scenic-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-management/index.wxss
@@ -85,32 +85,16 @@
   height: 320rpx;
   color: #fff;
   border-radius: 24rpx;
+  background: linear-gradient(135deg, #FE918D 0%, #FF4B7F 100%);
   overflow: hidden;
 }
 
 .bg {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #2F6BB3;
-}
-.bg::before, .bg::after {
-  position: absolute;
-  width: 320rpx;
-  height: 320rpx;
-  content: '';
-  border-radius: 50%;
-  background: #3979BE;
-}
-.bg::before {
-  left: -80rpx;
-  bottom: -200rpx;
-}
-.bg::after {
-  top: -230rpx;
-  right: -120rpx;
+  right: -30rpx;
+  bottom: -45rpx;
+  width: 240rpx;
+  height: 266rpx;
 }
 
 .main {
@@ -122,6 +106,7 @@
   height: 100%;
 }
 .balance-data-title {
+  color: #FFCDD7;
   font-size: 30rpx;
 }
 .balance-data-amount {
@@ -132,6 +117,7 @@
   margin-top: 24rpx;
 }
 .data-title, .data-supplement {
+  color: #FFCDD7;
   font-size: 22rpx;
 }
 .data-amount {
@@ -144,7 +130,7 @@
   top: 32rpx;
   right: 32rpx;
   color: #fff;
-  font-size: 28rpx;
+  font-size: 26rpx;
   width: 160rpx;
   height: 60rpx;
   border-radius: 30rpx;
