--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -94,7 +94,7 @@
       <view class="row">
         <image class="clock-icon" src="./images/time.png" />
         <view class="opening-status row {{!isOpen ? 'closed' : ''}}">{{!isOpen ? '已闭园' : '开园中'}}</view>
-        <view class="opening-hours">{{TIME.transform(curOpenTime.openTime, 'hh:mm')}}-{{TIME.transform(curOpenTime.closeTime, 'hh:mm')}}开放{{curOpenTime.tips ? ('（' + curOpenTime.tips + '）') : ''}}</view>
+        <view class="opening-hours">{{curOpenTime.openTime}}-{{curOpenTime.closeTime}}开放{{curOpenTime.tips ? ('（' + curOpenTime.tips + '）') : ''}}</view>
       </view>
       <view class="row">
         <view class="more-detail">详情</view>
